--- a/index.html
+++ b/index.html
@@ -6,79 +6,81 @@
     <title>Pizza Heaven</title>
     <style>
         *
-		{
-            font-family: Arial,san-serif;
-			margin: 0;
+	{
+        font-family: Arial,san-serif;
+	margin: 0;
         }
-		#logo
-		{
+	#logo
+	{
          width:100px;
          height:80px;		 
         }
-		header,#cont
-		{
-		display:flex;
-		margin-bottom:20px;
-		}
-		h1
-		{
-		color: #FA5B3D;
-		}
+	header,#cont
+	{
+	 display:flex;
+	 margin-bottom:20px;
+	}
+	h1
+	{
+	color: #FA5B3D;
+	}
         nav 
-		{
-            background-color: #FA5B3D;
-			max-width:100%;
-			overflow:hidden;
-			margin-bottom:20px;
+	{
+        background-color: #FA5B3D;
+	max-width:100%;
+	overflow:hidden;
+	margin-bottom:20px;
         }
-        nav a {
-            float: left;
-            color: white;
-            padding: 20px 20px;
-            text-align: center;
-            text-decoration: none;
+        nav a 
+	{
+        float: left;
+        color: white;
+        padding: 20px 20px;
+        text-align: center;
+        text-decoration: none;
         }
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
+        nav a:hover
+	{
+        background-color: #ddd;
+        color: black;
         }
         section
-		{
-            padding: 20px;
+	{
+        padding: 20px;
         }
-		img
-		{
-		width:100%;
-		height:auto;
-		}
-		#icont
-		{
-		width:60%;
-		height:50%;
-		}
-		#ap
-		{
-		 text-align:center;
-		 font-size:18px;
-		}
-		h2
-		{
-		text-align:center;
-		}
-		#address
-		{
-		line-height:30px;
-		margin-left:60px;
-		margin-top:30px;
-		width:100%;
-		}
-		footer
-		{
-            text-align: center;
-            background-color: #ff5733;
-            color: white;
-            padding: 30px 0px;
-            width: 100%;
+	img
+	{
+	width:100%;
+	height:auto;
+	}
+	#icont
+	{
+	width:60%;
+	height:50%;
+	}
+	#ap
+	{
+	text-align:center;
+	font-size:18px;
+	}
+	h2
+	{
+	text-align:center;
+	}
+	#address
+	{
+	line-height:30px;
+	margin-left:60px;
+	margin-top:30px;
+	width:100%;
+	}
+	footer
+	{
+        text-align: center;
+        background-color: #ff5733;
+        color: white;
+        padding: 30px 0px;
+        width: 100%;
         }
     </style>
 </head>
