--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
    
     <header id="home">
-	    <img src="/htmldemo/internal/logo.png" id="logo"/>
+	    <img src="logo.png" id="logo"/>
         <div>
 		<h1>Pizza Heaven</h1>
         <p>Delivered to Your Door</p>
@@ -109,18 +109,18 @@
 
     <section id="menu">
         <h2>Our Menu</h2>
-        <img src="/htmldemo/internal/menu.png"/>
+        <img src="menu.png"/>
     </section>
 
     <section id="gallery">
         <h2>Gallery</h2>
-        <img src="/htmldemo/internal/gallery.png"/>
+        <img src="gallery.png"/>
     </section>
 
     <section id="contact">
         <h2>Contact Us</h2>
 		<div id="cont">
-		<img src="/htmldemo/internal/contact.png" id="icont"/>
+		<img src="contact.png" id="icont"/>
         <p id="address">Ready to place an order? Contact us:<br><br>
 		   Mobile App: Pizza heaven<br>
 		   Phone: (123) 456-7890<br>
