--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     
     <section id="about">
        <p id="ap">We offer the best pizzas in town with fresh ingredients and unique flavors.</p>
-        <img src="/htmldemo/internal/about.png"/>
+        <img src="about.png"/>
 	</section>
 
     <section id="menu">
